--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/science/2018/jun/04/doctors-hail-world-first-as-womans-advanced-breast-cancer-is-eradicated">Doctors hail world first as woman’s advanced breast cancer is eradicated</a>
+                                    <a href="http://airbnb.io/lottie/">Lottie for Android, iOS, React Native, and Web</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17228517">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17209832">
                                         
-                                            20 comments
+                                            16 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528125236"
+                                            href="https://news.ycombinator.com/user?id=quickthrower2">quickthrower2</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527884753"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    86 points
+                                    88 points
                                 </span>
                             </td>
                         </tr>
@@ -245,13 +245,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17228128">
                                         
-                                            175 comments
+                                            176 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Amorymeltzer">Amorymeltzer</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528123066"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    83 points
+                                    84 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528131604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528132203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
