--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=OJFord">OJFord</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528101666"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    384 points
+                                    385 points
                                 </span>
                             </td>
                         </tr>
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528055363"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    357 points
+                                    359 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://arxiv.org/abs/1002.2284">Markets are efficient if and only if P = NP (2010)</a>
+                                    <a href="http://www.governmentattic.org/28docs/NSAsecurityPosters_1950s-60s.pdf">NSA posters from the 50s and 60s [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17202950">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17222827">
                                         
-                                            187 comments
+                                            98 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=perculis">perculis</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527833099"
+                                            href="https://news.ycombinator.com/user?id=rinze">rinze</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528065930"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     332 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528138205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528138805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
