--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.ycombinator.com/introducing-yc-series-a-batches/">Introducing YC Series A Batches</a>
+                                    <a href="https://www.zdnet.com/article/microsofts-github-acquisition-its-all-about-developer-relationships-influence/">Why Microsoft is buying GitHub: It's all about developer relationships</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17230916">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17231091">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=runesoerensen">runesoerensen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528138482"
+                                            href="https://news.ycombinator.com/user?id=mauliknshah">mauliknshah</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528139448"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     4 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528141204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528141804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
