--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/books/2018/jun/02/new-york-remaining-independent-bookshops-booksellers-ungar-bohbot">New York’s last remaining independent bookshops</a>
+                                    <a href="https://www.gnu.org/philosophy/open-source-misses-the-point.en.html">Why Open Source Misses the Point of Free Software (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216441">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17230785">
                                         
-                                            19 comments
+                                            46 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527974438"
+                                            href="https://news.ycombinator.com/user?id=pera">pera</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528137811"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     73 points
                                 </span>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/travel/2016/jul/12/sheep-view-360-faroe-islands-google-mapping-project">Faroe Islands fit cameras to sheep to create Google Street View (2016)</a>
+                                    <a href="https://www.theguardian.com/books/2018/jun/02/new-york-remaining-independent-bookshops-booksellers-ungar-bohbot">New York’s last remaining independent bookshops</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17214750">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216441">
                                         
-                                            10 comments
+                                            19 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=wglb">wglb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527950066"
+                                            href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527974438"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     73 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528142404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528143005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
