--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.apple.com/apple-events/june-2018/">Apple WWDC Keynote</a>
+                                    <a href="https://seekingalpha.com/article/4179058-japan-shows-fiat-currencies-doomed">Japan Shows Why – And How – All Fiat Currencies Are Doomed</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17229491">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17223375">
                                         
-                                            comments
+                                            4 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Redoubts">Redoubts</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528129797"
+                                            href="https://news.ycombinator.com/user?id=raleighm">raleighm</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528071319"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    6 points
+                                    7 points
                                 </span>
                             </td>
                         </tr>
@@ -263,17 +263,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.cjr.org/special_report/seymour-hersh-monday-interview.php/">Seymour Hersh on spies, state secrets, and the stories he doesn’t tell</a>
+                                    <a href="https://www.yahoo.com/news/frances-fake-news-law-leaves-media-experts-uneasy-145712000.html">France's fake news law leaves media experts uneasy</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17231493">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17231576">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=daddy_drank">daddy_drank</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528141343"
+                                            href="https://news.ycombinator.com/user?id=adventured">adventured</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528141741"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     5 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528143604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528144204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
