--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://bytemybits.gitlab.io/post/2018-05-23-how-to-android-without-google-easy-way/">How to Android without Google</a>
+                                    <a href="https://frontendian.co/cors">Demystifying CORS</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17213808">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17224772">
                                         
-                                            97 comments
+                                            42 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=schrodingersbox">schrodingersbox</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527933214"
+                                            href="https://news.ycombinator.com/user?id=andRyanMiller">andRyanMiller</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528088194"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     234 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528144804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528145405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
