--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -383,13 +383,13 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://developer.apple.com/macos/whats-new/">Apple Deprecates OpenGL and OpenCL</a>
+                                    <a href="https://developer.apple.com/macos/whats-new#deprecationofopenglandopencl">Apple Deprecates OpenGL and OpenCL</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17231593">
                                         
-                                            22 comments
+                                            48 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=WoodenChair">WoodenChair</a></strong> &nbsp;•&nbsp;
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528148403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528149005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
