--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://nevercode.io/blog/what-we-learned-about-ci-cd-tool-analysing-75k-builds/">We analysed 75K builds and this is what we learned about CI/CD</a>
+                                    <a href="http://befused.com/git/github-bitbucket-move">Migrate from GitHub to Bitbucket</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17231704">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17223855">
                                         
-                                            4 comments
+                                            3 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Rubytron">Rubytron</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528142406"
+                                            href="https://news.ycombinator.com/user?id=mansilladev">mansilladev</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528076773"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    8 points
+                                    9 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528149603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528150204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
