--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -431,19 +431,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://enqueuezero.com/data-serialization.html">Data serialization</a>
+                                    <a href="https://developer.apple.com/documentation/create_ml">Create ML</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17226781">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17232200">
                                         
-                                            80 comments
+                                            18 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=soasme">soasme</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528112030"
+                                            href="https://news.ycombinator.com/user?id=gok">gok</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528144914"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    71 points
+                                    72 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528150204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528150803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
