--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.petekeen.net/shutting-down-an-scorp">Notes on Shutting Down an S-Corp</a>
+                                    <a href="https://twitter.com/jasonfried/status/430871267881672704">If Github ends up selling itself one day, Microsoft will be the buyer (2014)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17232447">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17224382">
                                         
-                                            25 comments
+                                            20 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=zrail">zrail</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528146295"
+                                            href="https://news.ycombinator.com/user?id=doener">doener</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528083256"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    55 points
+                                    57 points
                                 </span>
                             </td>
                         </tr>
@@ -239,19 +239,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://developer.apple.com/documentation/mapkitjs">MapKit JS – Embed interactive Apple maps on your website</a>
+                                    <a href="https://shop.ungleich.ch/github-alternative">Your GitHub Alternative</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17232169">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17226106">
                                         
-                                            8 comments
+                                            80 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=plonkus">plonkus</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528144742"
+                                            href="https://news.ycombinator.com/user?id=telmich">telmich</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528105295"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    55 points
+                                    56 points
                                 </span>
                             </td>
                         </tr>
@@ -491,7 +491,7 @@
                                             href="https://news.ycombinator.com/user?id=bwasti">bwasti</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528131554"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    38 points
+                                    39 points
                                 </span>
                             </td>
                         </tr>
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=bgentry">bgentry</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528140689"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    36 points
+                                    37 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528158603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528159204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
