--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=Rubytron">Rubytron</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528142406"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    25 points
+                                    26 points
                                 </span>
                             </td>
                         </tr>
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=davizao4">davizao4</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528145721"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    21 points
+                                    22 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://developer.apple.com/documentation/safariextensions">Safari Extensions JS</a>
+                                    <a href="https://boyter.org/posts/sloc-cloc-code/">Sloc Cloc and Code – What Happened on the Way to Faster Cloc</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17232083">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17232884">
                                         
-                                            5 comments
+                                            3 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bangonkeyboard">bangonkeyboard</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528144197"
+                                            href="https://news.ycombinator.com/user?id=msangi">msangi</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528148906"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     18 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528158603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528159204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
