--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=evo_9">evo_9</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528136909"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    49 points
+                                    50 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.calm.com/relax/once-upon-a-gdpr">New GDPR law becomes bedtime story for grown-ups</a>
+                                    <a href="https://nevercode.io/blog/what-we-learned-about-ci-cd-tool-analysing-75k-builds/">We analysed 75K builds and this is what we learned about CI/CD</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17223935">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17231704">
                                         
-                                            7 comments
+                                            10 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=coldseattle">coldseattle</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528077741"
+                                            href="https://news.ycombinator.com/user?id=Rubytron">Rubytron</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528142406"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     29 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528164003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528164604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
