--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -293,7 +293,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17222861">
                                         
-                                            122 comments
+                                            123 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sohkamyung">sohkamyung</a></strong> &nbsp;•&nbsp;
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/features/2018-05-24/how-not-to-negotiate-a-6-1-billion-deal">How Not to Negotiate a $6.1B Deal</a>
+                                    <a href="http://bradfrost.com/blog/link/replacing-jquery-with-vue-js-no-build-step-necessary/">React is the new jQuery</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17199860">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17211283">
                                         
-                                            96 comments
+                                            197 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dpflan">dpflan</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527798138"
+                                            href="https://news.ycombinator.com/user?id=brennankreiman">brennankreiman</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527894417"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     222 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528164003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528164604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
