--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=kcody949">kcody949</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528124505"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    101 points
+                                    102 points
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=gok">gok</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528144914"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    98 points
+                                    99 points
                                 </span>
                             </td>
                         </tr>
@@ -527,19 +527,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://mako.cc/writing/hill-free_tools.html">Free Software Needs Free Tools (2010)</a>
+                                    <a href="https://jasonhpriestley.com/lr">LR Parsing: More Elegant Than You Think</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17226169">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17231847">
                                         
-                                            9 comments
+                                            21 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bcaa7f3a8bbc">bcaa7f3a8bbc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528105983"
+                                            href="https://news.ycombinator.com/user?id=jhpriestley">jhpriestley</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528142969"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    83 points
+                                    84 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.vox.com/science-and-health/2018/5/31/17344406/crispr-mosquito-malaria-gene-drive-editing-target-africa-regulation-gmo">The debate over whether to use genetically modified mosquitoes to fight malaria</a>
+                                    <a href="https://www.newyorker.com/news/annals-of-communications/how-the-math-men-overthrew-the-mad-men">How the Math Men Overthrew the Mad Men</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17214676">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17230262">
                                         
-                                            91 comments
+                                            26 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fluxic">fluxic</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527949094"
+                                            href="https://news.ycombinator.com/user?id=sonabinu">sonabinu</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528134801"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     83 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528164604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528165203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
