--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -365,13 +365,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17231493">
                                         
-                                            54 comments
+                                            55 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=daddy_drank">daddy_drank</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528141343"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    75 points
+                                    77 points
                                 </span>
                             </td>
                         </tr>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://news.mit.edu/2018/wireless-system-power-devices-inside-body-0604">Wireless system can power devices inside the body</a>
+                                    <a href="https://www.petekeen.net/shutting-down-an-scorp">Notes on Shutting Down an S-Corp</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17230720">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17232447">
                                         
-                                            32 comments
+                                            27 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tostitos1979">tostitos1979</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528137396"
+                                            href="https://news.ycombinator.com/user?id=zrail">zrail</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528146295"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     73 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528165203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528165804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
