--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528055363"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    376 points
+                                    377 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.governmentattic.org/28docs/NSAsecurityPosters_1950s-60s.pdf">NSA posters from the 50s and 60s [pdf]</a>
+                                    <a href="https://developer.apple.com/macos/whats-new#deprecationofopenglandopencl">Deprecation of OpenGL and OpenCL</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17222827">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17231593">
                                         
-                                            107 comments
+                                            212 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rinze">rinze</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528065930"
+                                            href="https://news.ycombinator.com/user?id=WoodenChair">WoodenChair</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528141857"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    348 points
+                                    349 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528165804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528166403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
