--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=lunchbreak">lunchbreak</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528138197"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    202 points
+                                    204 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/Pulkit-Khandelwal/Reinforcement-Learning-Notebooks">Reinforcement Learning Jupyter Notebooks</a>
+                                    <a href="https://www.gnu.org/philosophy/open-source-misses-the-point.en.html">Why Open Source Misses the Point of Free Software (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17217069">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17230785">
                                         
-                                            7 comments
+                                            141 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pulks">pulks</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527983439"
+                                            href="https://news.ycombinator.com/user?id=pera">pera</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528137811"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     190 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528167005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528167604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
