--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -293,7 +293,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17224329">
                                         
-                                            41 comments
+                                            42 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sbierwagen">sbierwagen</a></strong> &nbsp;•&nbsp;
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bbc.com/news/technology-41015486">Barcelona residents used sensors to demonstrate high noise levels at night</a>
+                                    <a href="https://developer.apple.com/documentation/create_ml">Create ML</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17218573">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17232200">
                                         
-                                            115 comments
+                                            22 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528015019"
+                                            href="https://news.ycombinator.com/user?id=gok">gok</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528144914"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    106 points
+                                    107 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528168203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528168805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
