--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://frontendian.co/cors">Demystifying CORS</a>
+                                    <a href="https://twitter.com/HeisSpiter/status/1002880397103988737">ReactOS can finally build itself</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17224772">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17215409">
                                         
-                                            46 comments
+                                            78 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=andRyanMiller">andRyanMiller</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528088194"
+                                            href="https://news.ycombinator.com/user?id=O_H_E">O_H_E</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527959542"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    245 points
+                                    246 points
                                 </span>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=thefilmore">thefilmore</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528132632"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    240 points
+                                    241 points
                                 </span>
                             </td>
                         </tr>
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=lunchbreak">lunchbreak</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528138197"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    208 points
+                                    210 points
                                 </span>
                             </td>
                         </tr>
@@ -485,7 +485,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17230785">
                                         
-                                            144 comments
+                                            147 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=pera">pera</a></strong> &nbsp;•&nbsp;
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528171204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528171803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
