--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,6 +215,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://www.recode.net/2018/5/30/17385116/mary-meeker-slides-internet-trends-code-conference-2018">Mary Meeker’s 2018 internet trends report</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17229200">
+                                        
+                                            5 comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=jmngomes">jmngomes</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528128073"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    15 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://plato.stanford.edu/entries/aristotle-ethics/">Aristotle's Ethics</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -444,7 +468,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528175403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528176003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
