--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wsj.com/articles/the-overprotected-american-child-1527865038">The Overprotected American Child</a>
+                                    <a href="https://drive.google.com/a/moundsviewschools.org/file/d/12dWQdmIdApTLtcKBF1yRyhBto5_Bz3I_/view?usp=drivesdk">A brief introduction to quantum computing</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17214841">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217155">
                                         
-                                            134 comments
+                                            17 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=simulate">simulate</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527951501"
+                                            href="https://news.ycombinator.com/user?id=friedrich12">friedrich12</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527984820"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    109 points
+                                    93 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528178404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528179003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
